# kvhs-api

./: .dockerignore  .env.example  .gitignore  CMS_README.md  Dockerfile  LICENSE  README.md  REFACTORING_GUIDE.md  REFACTORING_SUMMARY.md  alembic.ini  main.py  pyproject.toml  render.yaml  test_cms.py
.github/workflows/: ci.yml
alembic/: env.py
app/: database.py  main.py  models.py  schemas_old.py
app/api/: router.py
app/core/: config.py  constants.py  dependencies.py  exception_handlers.py  exceptions.py  logging_config.py  middleware.py  security.py
app/db/: __init__.py  mongodb.py  session.py
app/models/: __init__.py  academic.py  base.py  cms.py  user.py
app/repositories/: __init__.py  base.py  content.py  user.py
app/routes/: auth.py  calendar.py  cms_utils.py  content.py  courses.py  documents.py  enrollments.py  search.py  students.py  teachers.py
app/schemas/: __init__.py  academic.py  auth.py  base.py  cms.py  search.py  user.py
app/services/: __init__.py  auth.py  content.py
app/utils/: __init__.py  cloudinary.py  gridfs.py  helpers.py  minio_client.py
docs/: API_ARCHITECTURE.md  CMS_README.md  IMPLEMENTATION_SUMMARY.md
migrations/: env.py
migrations/versions/: 037986c50ce7_init.py
postman/: KVHS.postman_collection.json  KVHS_API.postman_collection.json
tests/: test_app_improvements.py
