[project]
name = "kvhs-api"
version = "0.1.0"
description = "KVHS School Management System with CMS API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.129.0",
    "httpx>=0.28.1",
    "pymysql>=1.1.2",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.41.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.0.0",
    "alembic>=1.18.4",
    "psycopg2-binary>=2.9.11",
    "motor>=3.7.1",
    "beanie>=2.1.0",
]
